Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

============================
HYPERMAIL VERSION 3.0.0
============================

2023-00-00 Jose Kahan
	* src/string.c
	translateurl() was not URL-encoding UTF-8 chars correctly
	makeinreplytocommand() was not calling translateurl for the subject

	* src/parse.c
	Hypermail leaked memory if a message had more than one of
	the following headers: Subject:, Date:, From:, Message-Id:.
	Hypermail now only takes into account the first header
	it finds, and ignores the duplicates. Note that multiple
	Message-Ids will be rendered, but only the first one will
	be taken into account internally (e.g., for threads).

	* src/{hypermail.h, struct.c}
	When a message/rfc body part contained only a stored
	attachment (e.g., text/html), even if the attachment
	was being added to the attachments dir, both the message/rfc822
	headers and the link to the stored attachment were not being
	added to the resulting markup and generated a memory leak.

	* src/parse.c
	Some old mail clients were could associate a message/rfc822
	Content-Type with a BASE64 Content-Transfer-Encoding, which
	violates RFC2046. If we find this case, we now force
	ENCODE_NORMAL (the one used for both 7bit and 8bit).

	* src/{setup.c, setup.h}
	new conf. option warn_deprecated_options to control whether we
	want hypermail to display warnings when a configuration file
	has options that have been deprecated or that we plan to deprecate
	in the next release.

	* src/{defaults.h.in, setup.c, hypermail.c}
	set a default breadcrumb for messages if neither
	mhtmlnavbar2upfile ihtmlnavbar2upfile config options are set

	* src/{parse.c, struct.c, hypermail.h}
	spamify() was being systematically applied to boundary-ids which broke
	boundary detection in multipart/ messages whenever a boundary-id had a
	'@' character.
	closes #94

	* src/{string.c, proto.h, struct.c, parse.c}
	When parsing message headers having DOS-style line